Correction visiblity-hidden des boutons carrossel

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -6575,6 +6575,7 @@ textarea.form-control-lg {
   align-self: stretch;
 }
 
+.visually-hidden,
 .visually-hidden-focusable:not(:focus):not(:focus-within) {
   position: absolute !important;
   width: 1px !important;
